--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -1,180 +1,4 @@
-
-@import './variables.scss';
-
-.home {
-  display: grid;
-  place-items: center;
-}
-
-.lyrics {
-  max-width: 25vw;
-  display: grid;
-  margin-bottom:1%;
-  justify-content:center;
-  span{
-    text-align: center;
-  }
-  input{
-    border-style:solid;
-    outline: none;
-    border-color: $orange;
-    margin-bottom:10%;
-    height:1.4em;
-    border-radius: 25px;
-    font-size:small;
-    border-width: initial;
-  }
-
-}
-
-.lyricsText {
-  max-width: 60vw;
-  margin-top:2em;
-  margin-bottom:2em;
-}
-
-.button-between {
-  margin-top: 2em;
-}
-
-.info {
-  max-width: 60vw;
-}
-
-.divtext {
-  font-family:$fontTitle;
-  font-size: 2em;
-  text-align: center;
-  max-width: 80%;
-}
-
-
-.header{
-  margin-top: 1.5%;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .AI{
-    margin-left: 5px;
-    font-weight: bold;
-    font-size: x-large;
-    color:$orange
-  }
-  .vibe{
-    font-size: x-large;
-  }
-  img{
-    width: 40%;
-  }
-  button{
-    align-items: right;
-  }
-}
-.theme{
-  display: inline-flex;
-  justify-content:right;
-  right: 5%;
-  top:10%;
-  position:fixed;
-  width:100%;
-  float:right;
-  button{
-    font-size: 1.5em;
-    border-radius:25px;
-    border: none;
-    &:hover{
-      background-color:$light;
-      cursor: pointer;
-    }
-  }
-}
-
-.darkMode{
-  background-color:$dark;
-  color:$light;
-  .theme{
-    button{
-      &:hover{
-        background-color:$dark;
-        cursor: pointer;
-      }
-    }
-  }
-}
-
-.load{
-  width: 10em;
-  height: 120%;
-  font-size: 1.2em;
-  background-color: $orange;
-  border:none;
-  color:white;
-  margin-top: 2%;
-  border-radius: 25px;
-  font-weight: 500;
-  &:hover{
-    cursor: pointer;
-  }
-
-}
-
-
-footer{
-  height:100px;
-}
-
-.sk-chase {
-  width: 40px;
-  height: 40px;
-  position: relative;
-  animation: sk-chase 2.5s infinite linear both;
-}
-
-.sk-chase-dot {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0; 
-  animation: sk-chase-dot 2.0s infinite ease-in-out both; 
-}
-
-.sk-chase-dot:before {
-  content: '';
-  display: block;
-  width: 25%;
-  height: 25%;
-  background-color: $orange;
-  border-radius: 100%;
-  animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
-}
-
-.sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
-.sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
-.sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
-.sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
-.sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
-.sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
-.sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
-.sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
-.sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
-.sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
-.sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
-.sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
-
-@keyframes sk-chase {
-  100% { transform: rotate(360deg); } 
-}
-
-@keyframes sk-chase-dot {
-  80%, 100% { transform: rotate(360deg); } 
-}
-
-@keyframes sk-chase-dot-before {
-  50% {
-    transform: scale(0.4); 
-  } 100%, 0% {
-    transform: scale(1.0); 
-  } 
-}
+@import '_Main.scss';
+@import '_Header.scss';
+@import '_Loading.scss';
+@import '_Footer.scss';
